@@ -39,7 +39,7 @@ public:
     RowEditor(QWidget *parent = 0, const char *name = 0, WFlags f = 0);
     ~RowEditor();
 
-    bool edit(Database *subject, int rowId = -1);
+    bool edit(Database *subject, int rowId=-1, bool copy=FALSE);
 
 private:
     void addContent(int rowId);
